[tool.poetry]
name = "nonebot-plugin-rcnb"
version = "0.0.0.1"
description = "rcnb in nonebot"
authors = ["Kyomotoi <kyomotoiowo@gmail.com>"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/Kyomotoi/nonebot_plugin_rcnb"
keywords = ["nonebot", "qqbot, "mirai"]

[tool.poetry.dependencies]
python = "^3.7"
nonebot2 = "^2.0.0-alpha.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
